# truggy

./: .clangd  .gitignore  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  README.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: build.yml  claude-issue-triage.yml  claude.yml  lock-closed-issues.yml  stale-issues.yml
cmake/: jetson-nano-toolchain.cmake  setup-jetson-sysroot.sh
config/: mppi_costs.yaml  truggy.yaml
deploy/clangd/: Dockerfile  README.md  k8s-deployment.yaml
docs/: Architecture.md  Build-Guide.md  Circuit-Diagram.md  Hardware.md  Home.md  MPPI-Reference.md  Serial-Protocol.md  Vehicle-Dynamics.md
firmware/common/: protocol.h
firmware/truggy_bridge/: truggy_bridge.ino
firmware/truggy_bridge_esp32/: truggy_bridge_esp32.ino
scripts/: flash_firmware.sh  remote-build.sh  run.sh
sim/gazebo/: track.sdf  truggy.sdf
src/: main.cpp
src/actuation/: bridge.cpp  bridge.h
src/common/: config.cpp  config.h  logger.h  ring_buffer.h  serial.cpp  serial.h  timing.h  types.h
src/perception/: costmap.cu  costmap.h  perception.cpp  perception.h
src/planning/: costs.cu  costs.h  dynamics.cu  dynamics.h  mppi.cu  mppi.h
src/state/: ekf.cpp  ekf.h  imu.h
tools/: mppi_bench.cu  serial_test.cpp  viewer.py
